--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <%= title %>
-    <h1>Home</h1>
-    <p>Welcome to the home page!</p>
+    <a id="company" href="https://hodlinfo.com/">
+      <h1 id="company1">HODLINFO</h1>
+    </a>
   </body>
 </html>
