sort of column and row maked

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,59 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title><%= title %></title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <a id="company" href="https://hodlinfo.com/">
-      <h1 id="company1">HODLINFO</h1>
-    </a>
+    <div id="main">
+      <a id="company" href="https://hodlinfo.com/">
+        <h1 id="company1">HODLINFO</h1>
+      </a>
+      <div id="">
+        <h1 id="company2">Bitcoin Price</h1>
+        <button>inr</button>
+        <div class="dropdown">
+          <button class="dropbtn">crypto</button>
+          <div class="dropdown-content">
+            <a>btc</a>
+            <a>xrp</a>
+            <a>eth</a>
+            <a>trx</a>
+            <a>eos</a>
+            <a>zil</a>
+            <a>bat</a>
+            <a>zrx</a>
+            <a>req</a>
+            <a>nuls</a>
+          </div>
+        </div>
+        <button>BUY crypto</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="column">
+        <h3>Platform Name</h3>
+        <p>REQ/INR</p>
+      </div>
+      <div class="column">
+        <h3>Last Trade Price</h3>
+        <p>8.2599</p>
+      </div>
+      <div class="column">
+        <h3>Buy/Sell</h3>
+        <p>₹7.8318 <span style="font-weight: 300">/</span> ₹8.21</p>
+      </div>
+      <div class="column">
+        <h3>Difference</h3>
+        <p>Low: 7.83<br />High: 8.299</p>
+      </div>
+      <div class="column">
+        <h3>Saving</h3>
+        <p>Volume: 42.0</p>
+      </div>
+    </div>
   </body>
 </html>
