Controller added getPost showing undefined

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,16 +18,16 @@
         <div class="dropdown">
           <button class="dropbtn">crypto</button>
           <div class="dropdown-content">
-            <a onclick="showTicker('btc')">btc</a>
-            <a onclick="showTicker('xrp')">xrp</a>
-            <a onclick="showTicker('eth')">eth</a>
-            <a onclick="showTicker('trx')">trx</a>
-            <a onclick="showTicker('eos')">eos</a>
-            <a onclick="showTicker('zil')">zil</a>
-            <a onclick="showTicker('bat')">bat</a>
-            <a onclick="showTicker('zrx')">zrx</a>
-            <a onclick="showTicker('req')">req</a>
-            <a onclick="showTicker('nuls')">nuls</a>
+            <a onclick="showTicker('btcinr')">btc</a>
+            <a onclick="showTicker('xrpinr')">xrp</a>
+            <a onclick="showTicker('ethinr')">eth</a>
+            <a onclick="showTicker('trxinr')">trx</a>
+            <a onclick="showTicker('eosinr')">eos</a>
+            <a onclick="showTicker('zilinr')">zil</a>
+            <a onclick="showTicker('batinr')">bat</a>
+            <a onclick="showTicker('zrxinr')">zrx</a>
+            <a onclick="showTicker('reqinr')">req</a>
+            <a onclick="showTicker('nulsinr')">nuls</a>
           </div>
         </div>
         <div class="row" id="tickerRow"></div>
