All error removed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,9 +10,9 @@
   <body>
     <div id="main">
       <a id="company" href="https://hodlinfo.com/">
-        <h1 id="company1">HODLINFO</h1>
+        <h1 class="text-3xl font-bold underline" id="company1">HODLINFO</h1>
       </a>
-      <div id="">
+      <div style="margin-top: 100px">
         <h1 id="company2">Bitcoin Price</h1>
         <button>inr</button>
         <div class="dropdown">
@@ -31,7 +31,11 @@
           </div>
         </div>
         <div class="row" id="tickerRow"></div>
-        <button>BUY crypto</button>
+        <a
+          href="https://wazirx.com/invite/sp7pvbt6?utm_source=finstreet&utm_medium=affiliate&utm_campaign=regnow-btn"
+        >
+          <button>BUY <%= locals.title %></button>
+        </a>
       </div>
     </div>
 
