--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 * {
   box-sizing: border-box;
   font-family: sans-serif;
@@ -42,6 +45,7 @@
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
+  cursor: grab;
   position: absolute;
   background-color: #f9f9f9;
   min-width: 160px;
@@ -82,8 +86,8 @@
 .column {
   flex: 1;
   text-align: center;
-  border: 1px solid black;
-  padding: 5px;
+  border: 1px solid white;
+  padding: 7px;
 }
 
 .column h3 {
