--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@
 }
 
 .dropdown-content a:hover {
-  background-color: #f1f1f1;
+  background-color: rebeccapurple;
 }
 
 .dropdown:hover .dropdown-content {
@@ -113,4 +113,9 @@ a {
 }
 .decoW {
   color: white;
+}
+
+button {
+  width: 200px;
+  cursor: pointer;
 }
