--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+
     <title><%= locals.title %></title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -12,10 +17,13 @@
       <a id="company" href="https://hodlinfo.com/">
         <h1 class="text-3xl font-bold underline" id="company1">HODLINFO</h1>
       </a>
-      <div style="margin-top: 100px">
+      <div style="margin-top: 50px">
         <button class="bigBtn">inr</button>
         <div class="dropdown">
-          <button class="dropbtn bigBtn">crypto</button>
+          <button class="dropbtn bigBtn">
+            <i class="fa fa-caret-down"></i>
+            crypto
+          </button>
           <div class="dropdown-content">
             <a onclick="showTicker('btcinr')">btc</a>
             <a onclick="showTicker('xrpinr')">xrp</a>
@@ -28,15 +36,28 @@
             <a onclick="showTicker('reqinr')">req</a>
             <a onclick="showTicker('nulsinr')">nuls</a>
           </div>
-          <a
-            href="https://wazirx.com/invite/sp7pvbt6?utm_source=finstreet&utm_medium=affiliate&utm_campaign=regnow-btn"
-          >
-            <button class="bigBtn">BUY</button>
-          </a>
         </div>
-        <div class="row" id="tickerRow"></div>
+        <a
+          href="https://wazirx.com/invite/sp7pvbt6?utm_source=finstreet&utm_medium=affiliate&utm_campaign=regnow-btn"
+        >
+          <button class="bigBtn">BUY</button>
+        </a>
+        <a href="https://t.me/HodlInfoBot?startgroup=true">
+          <button
+            style="
+              width: 150px;
+              background-color: rgb(61, 198, 193);
+              margin-left: 5px;
+            "
+            class="bigBtn"
+          >
+            Join Tekegram
+          </button>
+        </a>
+        <div class="row" id="tickerRow" style="margin-top: 250px"></div>
       </div>
     </div>
     <script src="/js/fetch.js"></script>
+    <!-- <script src="/js/fetch1.js"></script> -->
   </body>
 </html>
